@@ -3592,10 +3592,13 @@ focus_tree = {
 	focus = {
 		id = CHI_beiyang_meditator
 		icon = GFX_focus_li_yuanhong
-		cost = 8
+		cost = 14
 		relative_position_id = CHI_maintain_status_quo
 		x = 0
 		y = 1
+		allow_branch = {
+			has_global_flag = yuan_shikai_dead
+		}
 		prerequisite = {
 			focus = CHI_maintain_status_quo
 		}
