@@ -1210,6 +1210,10 @@ clear_xinhai_tags = {
 				disband = no
 			}
 			delete_unit_template_and_units = {
+				division_template = "Luyingbing"
+				disband = no
+			}
+			delete_unit_template_and_units = {
 				division_template = "Loyalist Qiyijun"
 				disband = no
 			}
@@ -1394,10 +1398,6 @@ xinhai_end_effect = {
 				disband = no
 			}
 			delete_unit_template_and_units = {
-				division_template = "Manchu Banner"
-				disband = no
-			}
-			delete_unit_template_and_units = {
 				division_template = "Loyalist Qiyijun"
 				disband = no
 			}
@@ -1571,6 +1571,10 @@ xinhai_end_effect = {
 			}
 			delete_unit_template_and_units = {
 				division_template = "Manchu Banner"
+				disband = no
+			}
+			delete_unit_template_and_units = {
+				division_template = "Luyingbing"
 				disband = no
 			}
 			delete_unit_template_and_units = {
