@@ -211,6 +211,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			602 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 1
+					prioritize_location = 9999
+				}
+			}
+		}
+
 		HNC = {
 			add_state_core = 602
 			add_state_core = 893
@@ -252,7 +264,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -318,7 +337,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -335,6 +361,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			600 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 1
+					prioritize_location = 7007
+				}
+			}
+		}
+
 		JXC = {
 			add_state_core = 600
 			add_state_core = 1046
@@ -383,7 +421,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -419,6 +464,26 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			capital_scope = {
+				create_unit = {
+					division = "division_template = \"Manchu Banner\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 5
+				}
+			}
+			615 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 1
+					prioritize_location = 10421
+				}
+			}
+		}
+		
 		SHX = {
 			add_state_core = 615
 
@@ -457,7 +522,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -474,6 +546,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			598 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 2
+					prioritize_location = 11913
+				}
+			}
+		}
+
 		CHI = {
 			every_state = {
 				limit = {
@@ -533,7 +617,14 @@ country_event = {
 			}
 			add_ideas = CHI_idea_xinhai_revolution
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 
 			CHI_chen_qimei = {
 				if = {
@@ -580,6 +671,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			325 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 12
+					prioritize_location = 12282
+				}
+			}
+		}
+
 		YUN = {
 			add_state_core = 325
 
@@ -620,7 +723,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 		
 		GZC = {
@@ -661,7 +771,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -718,7 +835,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -735,6 +859,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			892 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 2
+					prioritize_location = 1162
+				}
+			}
+		}
+
 		CHI = {
 			CHI_hu_hanmin = {
 				set_nationality = GDC
@@ -799,7 +935,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 
 			set_party_name = {
 				ideology = democratic
@@ -841,6 +984,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			1064 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 2
+					prioritize_location = 5048
+				}
+			}
+		}
+
 		SCC = {
 			set_state_owner = 605
 			set_state_owner = 1064
@@ -879,7 +1034,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -896,6 +1058,18 @@ country_event = {
 	}
 	
 	immediate = {
+		QIN = {
+			597 = {
+				create_unit = {
+					division = "division_template = \"Luyingbing\"	start_experience_factor = 0.1	start_equipment_factor = 0.5"
+					owner = PREV
+					allow_spawning_on_enemy_provs = yes
+					count = 3
+					prioritize_location = 1084
+				}
+			}
+		}
+
 		SDC = {
 			add_state_core = 597
 			add_state_core = 745
@@ -945,7 +1119,14 @@ country_event = {
 				tree = empty_focus
 			}
 
-			HBC = { add_to_faction = PREV }
+			every_country = {
+				limit = {
+					is_china_or_warlord_no_tt = no
+					is_faction_leader = yes
+					NOT = { tag = QIN }
+				}
+				add_to_faction = PREV
+			}
 		}
 	}
 }
@@ -2562,6 +2743,8 @@ country_event = {
 							days = 10
 						}
 						unlock_national_focus = CHI_beiyang_meditator
+						set_global_flag = chinese_warlord_crisis
+						set_global_flag = warlord_era
 					}
 				}
 			}
@@ -4702,15 +4885,83 @@ country_event = {
 		SCC = {
 			if = {
 				limit = {
+					has_global_flag = hongxian_failed
 					has_global_flag = national_protection_war
 				}
 				CHI = {
+					YUN_luo_peijin = {
+						set_nationality = SCC
+						if = {
+							limit = {
+								has_ideology = authoritarian_democracy
+							}
+							promote_character = authoritarian_democracy
+						}
+						else = {
+							add_country_leader_role = {
+								promote_leader = yes
+								country_leader = {
+									ideology = authoritarian_democracy
+								}
+							}
+						}
+						if = {
+							limit = {
+								has_ideology = stratocracy
+							}
+							promote_character = stratocracy
+						}
+						else = {
+							add_country_leader_role = {
+								promote_leader = yes
+								country_leader = {
+									ideology = stratocracy
+								}
+							}
+						}
+					}
 					CHI_cai_e = {
 						set_nationality = SCC
+						if = {
+							limit = { has_ideology = revolutionary_nationalism }
+							promote_character = revolutionary_nationalism
+						}
+						else = {
+							add_country_leader_role = {
+								country_leader = {
+									ideology = revolutionary_nationalism
+									traits = {
+										revolutionary_general
+										generallissimo
+									}
+									desc = CHI_cai_e_desc
+								}	
+								promote_leader = yes
+							}
+						}
+						if = {
+							limit = { has_ideology = authoritarian_democracy }
+							promote_character = authoritarian_democracy
+						}
+						else = {
+							add_country_leader_role = {
+								country_leader = {
+									ideology = authoritarian_democracy
+									traits = {
+										revolutionary_general
+										generallissimo
+									}
+								}	
+								promote_leader = yes
+							}
+						}
 					}
-					YUN_luo_peijin = {
-						
-					}
+				}
+			}
+			else = {
+				SCC_liu_cunhou = {
+					promote_character = warlordism
+					promote_character = stratocracy
 				}
 			}
 			every_state = {
