@@ -71,6 +71,15 @@ division_template = {
 	is_locked = yes
 }
 
+division_template = {
+	name = "Luyingbing" #綠營兵
+	division_names_group = CHI_GAR_02
+	regiments = {
+		infantry = { x = 0 y = 0 }
+	}
+	is_locked = yes
+}
+
 ###################################################################
 units = {
 
