@@ -1972,9 +1972,6 @@
 
  SER_AUS_neutrality_subject:0 "Serbia"
  SER_AUS_fascism_subject:0 "Serbia"
-
- XSM_QIN:0 "Qinghai"
- XSM_QIN_DEF:0 "the Qinghai Province"
  
  ICE_DEN_autonomy_tgwr_real_union_DEF:0 "the Kingdom of Iceland"
  ICE_DEN_autonomy_tgwr_personal_union_DEF:0 "the Kingdom of Iceland"
