@@ -607,8 +607,6 @@
  SIK_neutrality_DEF:0 "the Sinkiang Clique"
  SIK_fascism:0 "Sinkiang Clique"
  SIK_fascism_DEF:0 "the Sinkiang Clique"
- SIK_democratic:0 "Sinkiang Province"
- SIK_democratic_DEF:0 "the Sinkiang Province"
  SIK_communism_DEF:0 "the Sinkiang's Anti-Imperialist Association"
  SIK:0 "Sinkiang"
  SIK_DEF:0 "Sinkiang"
@@ -803,8 +801,6 @@
  GXC_neutrality_DEF:0 "the Guangxi Clique"
  GXC_fascism:0 "Guangxi Clique"
  GXC_fascism_DEF:0 "the Guangxi Clique"
- GXC_democratic:0 "Guangxi Province"
- GXC_democratic_DEF:0 "the Guangxi Province"
  GXC_communism:0 "Guangxi Soviet Zone"
  GXC_communism_DEF:0 "the Guangxi Soviet Zone"
  GXC:0 "Guangxi"
@@ -812,8 +808,6 @@
  GXC_ADJ:0 "Guangxi"
  SHX_neutrality_DEF:0 "the Shanxi Clique"
  SHX_fascism_DEF:0 "the Shanxi Clique"
- SHX_democratic:0 "Shanxi Province"
- SHX_democratic_DEF:0 "the Shanxi Province"
  SHX_communism:0 "Shanxi Soviet Zone"
  SHX_communism_DEF:0 "the Shanxi Soviet Zone"
  SHX:0 "Shanxi"
@@ -824,8 +818,6 @@
  XSM_fascism:0 "Qinghai Ma Clique"
  XSM_fascism_DEF:0 "the Qinghai Ma Clique"
  XSM_fascism_ADJ:0 "Ma"
- XSM_democratic:0 "Qinghai Province"
- XSM_democratic_DEF:0 "the Qinghai Province"
  XSM_communism:0 "Qinghai Soviet Zone"
  XSM_communism_DEF:0 "the Qinghai Soviet Zone"
  XSM:0 "Qinghai"
@@ -844,8 +836,8 @@
  FNG_neutrality_DEF:0 "the Fengtian Clique"
  FNG_fascism:0 "Fengtian Clique"
  FNG_fascism_DEF:0 "the Fengtian Clique"
- FNG_democratic:0 "Fengtian Province"
- FNG_democratic_DEF:0 "the Fengtian Province"
+ FNG_democratic:0 "Eastern Three Provinces"
+ FNG_democratic_DEF:0 "the Eastern Three Provinces"
  FNG_communism:0 "Fengtian Soviet Zone"
  FNG_communism_DEF:0 "the Fengtian Soviet Zone"
  ZHE:0 "Zhejiang"
@@ -854,8 +846,6 @@
  ZHE_neutrality_DEF:0 "the Zhejiang Clique"
  ZHE_fascism:0 "Zhejiang Clique"
  ZHE_fascism_DEF:0 "the Zhejiang Clique"
- ZHE_democratic:0 "Zhejiang Province"
- ZHE_democratic_DEF:0 "the Zhejiang Province"
  ZHE_communism:0 "Zhejiang Soviet Zone"
  ZHE_communism_DEF:0 "the Zhejiang Soviet Zone"
  GDC:0 "Guangdong"
@@ -910,8 +900,6 @@
  JNC_neutrality_DEF:0 "the Jiangsu Clique"
  JNC_fascism:0 "Jiangsu Clique"
  JNC_fascism_DEF:0 "the Jiangsu Clique"
- JNC_democratic:0 "Jiangsu Province"
- JNC_democratic_DEF:0 "the Jiangsu Province"
  JNC_communism:0 "Jiangsu Soviet Zone"
  JNC_communism_DEF:0 "the Jiangsu Soviet Zone"
  JXC:0 "Jiangxi"
@@ -951,8 +939,6 @@
  FJN_neutrality_DEF:0 "the Fujian Clique"
  FJN_fascism:0 "Fujian Clique"
  FJN_fascism_DEF:0 "the Fujian Clique"
- FJN_democratic:0 "Fujian Province"
- FJN_democratic_DEF:0 "the Fujian Province"
  FJN_communism:0 "Fujian Soviet Zone"
  FJN_communism_DEF:0 "the Fujian Soviet Zone"
  JLN:0 "Jilin"
@@ -961,8 +947,6 @@
  JLN_neutrality_DEF:0 "the Jilin Clique"
  JLN_fascism:0 "Jilin Clique"
  JLN_fascism_DEF:0 "the Jilin Clique"
- JLN_democratic:0 "Jilin Province"
- JLN_democratic_DEF:0 "the Jilin Province"
  JLN_communism:0 "Jilin Soviet Zone"
  JLN_communism_DEF:0 "the Jilin Soviet Zone"
  TGC:0 "Tunganistan"
@@ -3155,8 +3139,9 @@
  GAN_neutrality_DEF:0 "the Ma Clique"
  GAN_fascism:0 "Ma Clique"
  GAN_fascism_DEF:0 "the Ma Clique"
- GAN_democratic:0 "Ningxia Province"
- GAN_democratic_DEF:0 "the Ningxia Province"
+ GAN_democratic:0 "Ningxia"
+ GAN_democratic_DEF:0 "Ningxia"
+ GAN_democratic_ADJ:0 "Ningxia"
  GAN_communism:0 "Xibei Soviet Zone"
  GAN_communism_DEF:0 "the Xibei Soviet Zone"
 
