@@ -2084,6 +2084,7 @@
  CHI_declare_war_CER_desc:0 "Due to the unique legal status of [FROM.GetNameDefCap]-inherently Chinese territory, yet constituted as a railway concession, administered by enemy—our forces have hitherto hesitated to advance. At this point, however, any conflict with the railway company or friction with the local inhabitants is no longer a deterrent."
  CHI_remove_socialist_influence: "Launch the Encirclement Campaigns"
  CHI_remove_socialist_influence_desc: "In the harsh and backward regions of many Chinese provinces, socialists have entrenched themselves, proclaiming council republics, engaging in banditry, inciting peasants, and engaging in riots and looting. It will take considerable time, effort, and money, but unless we eradicate them, our country will never be stable."
+ CHI_TIB_border_war:0 "Sino-Tibetan War"
 
 
  TUR_OPDA_CURRENCY_TOOLTIP:0 "§o                            Exchange Rates                      §!\n§d-----------------------------------------------------------------§!\n§Y3%§! §vConsumer Goods Factories factor =§! §Y0.295 Thousand Liras§!\n§d----------------------------------------------------------------§!"
