@@ -2,5 +2,8 @@
 -
 
 # Tweaks and Fixes
-- 
+- Tweaked Haldane mission and fixed Brtitish neutrality
+- Fixed Bosnian condominium idea
+- Rebalanced Xinhai Revolution
+- Tweaked Warlord Era trigger for Maintain the Status Quo focus
 - Other unlisted fixes and tweaks;
